--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
   },
   "dependencies": {
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "debug": "^4.3.5",
     "express": "^4.19.2",
     "express-async-handler": "^1.2.0",
     "express-validator": "^7.1.0",
     "luxon": "^3.5.0",
-    "mongoose": "^8.4.1"
+    "mongoose": "^8.4.1",
+    "mongoose-paginate-v2": "^1.9.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.3"
